Bug de tela resolvido